# swagger/swaggerOutput.json
@@ -185,11 +185,6 @@
         "description": "edit details of biz user",
         "parameters": [
           {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
             "name": "user",
             "description": "user token",
             "in": "query",
@@ -218,14 +213,26 @@
             "description": "user details",
             "in": "query",
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "example": "any"
+                },
+                "user": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           }
         }
       }
@@ -967,30 +974,6 @@
         }
       }
     },
-    "/language/{id}": {
-      "delete": {
-        "tags": [
-          "Language"
-        ],
-        "description": "remove language from database",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/project/getStepById/{projectId}/{stepId}": {
       "get": {
         "description": "",
@@ -1058,6 +1041,64 @@
         }
       }
     },
+    "/project/newStep/{projectId}": {
+      "put": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "create step",
+        "parameters": [
+          {
+            "name": "projectId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/project/duplicateProject/{projectId}": {
+      "post": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "duplicate project",
+        "parameters": [
+          {
+            "name": "projectId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
     "/project/projectByUser": {
       "get": {
         "tags": [
@@ -1098,6 +1139,35 @@
         }
       }
     },
+    "/project/deleteStep/{projectId}": {
+      "delete": {
+        "tags": [
+          "Project"
+        ],
+        "description": "delete step",
+        "parameters": [
+          {
+            "name": "projectId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
     "/project/deleteProject/{projectId}": {
       "delete": {
         "tags": [
@@ -1121,6 +1191,32 @@
         "parameters": [
           {
             "name": "projectId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/project/updateStep/{templateId}": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "templateId",
             "in": "path",
             "required": true,
             "type": "string"
